[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/2d/goldmedal.png" type="Texture" id=1]
[ext_resource path="res://Assets/GUI/DefaultTheme.tres" type="Theme" id=2]
[ext_resource path="res://Src/GUI/LevelSelector.gd" type="Script" id=3]

[node name="LevelSelector" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 583.0
margin_top = 293.0
margin_right = 697.0
margin_bottom = 427.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="CenterContainer/VBoxContainer"]
margin_right = 114.0
margin_bottom = 35.0
text = "2"

[node name="Medal" type="TextureRect" parent="CenterContainer/VBoxContainer"]
margin_top = 39.0
margin_right = 114.0
margin_bottom = 103.0
rect_min_size = Vector2( 64, 64 )
texture = ExtResource( 1 )
expand = true

[node name="ScoreLabel" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 107.0
margin_right = 114.0
margin_bottom = 134.0
text = "Best Score: 0"
[connection signal="focus_entered" from="." to="." method="_on_LevelSelector_focus_entered"]
[connection signal="mouse_entered" from="." to="." method="_on_LevelSelector_focus_entered"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Button" to="." method="_on_Button_pressed"]
